--- a/schedule/week-03/02/labs/solar system.html
+++ b/schedule/week-03/02/labs/solar system.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Solar System</title>
 
     <!--
         1. There is one error in the 'head' block. Update it.
@@ -16,7 +16,9 @@
 
 <body>
     <main>
-        <h3>The Solar System formed around 4.6 billion years ago.</h3>
+        <section>
+        <h1>Solar System</h1>
+            <p>The Solar System formed around 4.6 billion years ago.</p>
         <img src="images/solar-system.jpg" align="right" alt="solar system"/>
         <!--
             2. Add an img tag to include the image solar-system.jpg below the heading
@@ -34,9 +36,9 @@
             new model that explained the movement of the planets with the Sun at the center of the Solar System.
         </p>
 
-        <p>
-            <h1>Sun</h1>
-            The sun is at the center of our solar system. 
+        
+            <h2>Sun</h2>
+        <p>The sun is at the center of our solar system.</p>
         <table width="80%" border="1" cellspacing="5" cellpadding="5">
             <tr>
                 <th>Label</th>
@@ -74,13 +76,12 @@
                 Mass:	1.99 × 10^30 kg (333,060 Earths)
                 Surface Temperature:	5,500 °C
             -->
-        </p>
-
+        </section>
         <section>
-        <h4>Planets</h4>
+        <h2>Planets</h2>
         <!-- 5. Link to the planets html page-->
-        <p>There are 9 planets in our solar system. You can <a href="">read about</a> them.</p>
-    </section>
+        <p>There are 9 planets in our solar system. You can <a href="Planets.html">read about</a> them.</p>
+        </section>
        
     <!--
         6. There are at least 3 more errors on this page that need to be fixed
@@ -93,7 +94,7 @@
         -->
 
 
-
+    </main>
 </body>
 
 </html>
