--- a/schedule/week-03/index.html
+++ b/schedule/week-03/index.html
@@ -78,7 +78,8 @@
 </ul>
 <h3 id="post-class-reading">Post-Class Reading</h3>
 <ul>
-<li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">HTML Tags</a></li>
+    <li>a href="https://www.w3schools.com/html/html_layout.asp">HTML Layout</li>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">HTML Tags</a></li>
 </ul>
 <h3 id="homework-due-this-week">Homework due this week</h3>
     <p>Look at page <a href="02/after-class"><code>week-03/02/after-class/index.html</code></a></p>
