Adding week 2 submissions

--- a/question-bank.html
+++ b/question-bank.html
@@ -46,7 +46,7 @@ Additional content to come
     <li>How can you tell if the data in a web request is encrypted?</li>
     <li>What is the different between HTTP and HTTPS?</li>
     <li>Can applications other than browsers issue HTTP requests?</li>
-    <li>what is the different between a top-level-domain and a subdomain?
+    <li>what is the different between a top-level-domain and a subdomain?</li>
         <!--
 <li>What is the significance of W3C and what purpose does it serve?</li>
 <li>What does HTTP stand for and what does it do? What is the difference between a URL and a Protocol?</li>
@@ -55,12 +55,58 @@ Additional content to come
 <li>Explain the difference between the internet and the web.  </li>
 <li>Explain the purpose of the browser</li>
 <li>List the cornerstone technologies of the WWW</li>
-<li>What is the difference between back-end programming and front-end programming?</li>
+<li>What is the difference between back-end programming and front-end programming?</li>-->
 </ul>
--->
 <h2 id="week-2-html">Week 2 - HTML</h2>
-content to come<!--
 <ul>
+    <li>What is HyperText Markup Language?</li>
+    <li>Is HTML rendered by a web browser?</li>
+    <li>Do you have to include a closing slash?</li>
+    <li>What are the four main components used to build an HTML document?</li>
+    <li>What are three components are always required for a webpage?</li>
+    <li>What is HTML made up of?</li>
+    <li>What is a webpage made up of?</li>
+    <li>How do you format attributes on HTML elements?</li>
+    <li>What are tags in html?</li>
+    <li>Is this an acceptable line?<br/>
+        <head><br/>
+            <title>The Right Answer<br/>
+        </head>
+    </li>
+    <li>What elements should appear in an HTML file only once?</li>
+    <li>Who is responsible for managing the HTML protocol?</li>
+    <li>What is the difference between HTTP and HTTPS?/li>
+    <li>Explain the difference between the world wide web and the internet.</li>
+    <li>What are the components of an HTML page?</li>
+    <li>When should a developer add comments to code? What is the significance of these comments?</li>
+    <li>How does Hypertext Markup language code become a webpage display?</li>
+    <li>What are the three cornerstone technologies for the World Wide Web?</li>
+    <li>Should tags and elements in HTML be written in uppercase, lowercase, or a mix of both?</li>
+    <li>Do all HTML tags have an end tag? Why?</li>
+    <li>What do the abbreviations HTTP and HTML stand for?</li>
+    <li>Can applications other than browsers issue HTTP requests?</li>
+    <li>What is the different between a top-level domain and a subdomain?</li>
+    <li>Can you include <u> in an h1 tag?</li>
+    <li>Why is it important to close your tags?</li>
+    <li>What does the <html> tag do?</li>
+    <li>What are the six main components of an HTML page?</li>
+    <li>What is the difference between HTML, CSS and JavaScript?</li>
+    <li>What is the difference between an element and a tag in an HTML page?</li>
+    <li>What is the purpose of an HTML browser?</li>
+    <li>What is the most common way to store and transmit HTML?</li>
+    <li>What does doctype represent?</li>
+    <li>What is the <dl> tag used for?</li>
+    <li>What are the three different technologies used to create web pages?</li>
+    <li>What does the <head> element include?</li>
+    <li>What does it mean when HTML is consistent across every browser?</li>
+    <li>What can potentially happen if more than one head, body, and html tag are included in a code?</li>
+    <li>What does HTML allow you to create?</li>
+    <li>What should be contained in the first line of every HTML5 document?</li>
+    <li>How do you write a comment in your html file but ensure it is not visible on the web page when itis displayed through the browser?</li>
+    <li>The visible part of the HTML document is contained in what element?</li>
+    <li>What 3 components make up a web page and what are each of their roles?</li>
+    <li>
+    <!--
 <li>What must be declared in the first line of all HTML documents? DocType Name a Tag and an Element.</li>
 <li>What is metadata? Give an example of a tag that uses metadata</li>
 <li>What are the cornerstone technologoies of the web?</li>
@@ -70,7 +116,8 @@ content to come<!--
 <li>What is the purpose of DOCTYPE?</li>
 <li>List one of the recommended use case of the H1 tag?</li>
 <li>Give an example of a nested tag</li>
-</ul>-->
+-->
+</ul>
 <h2 id="week-3">Week 3</h2>
 content to come<!--
 <ul>
