--- a/question-bank.html
+++ b/question-bank.html
@@ -69,9 +69,9 @@ Additional content to come
     <li>How do you format attributes on HTML elements?</li>
     <li>What are tags in html?</li>
     <li>Is this an acceptable line?<br/>
-        <head><br/>
-            <title>The Right Answer<br/>
-        </head>
+        &lt;head&gt;<br/>
+            &lt;title&gt;The Right Answer<br/>
+        &lt;/head&gt;
     </li>
     <li>What elements should appear in an HTML file only once?</li>
     <li>Who is responsible for managing the HTML protocol?</li>
@@ -86,18 +86,18 @@ Additional content to come
     <li>What do the abbreviations HTTP and HTML stand for?</li>
     <li>Can applications other than browsers issue HTTP requests?</li>
     <li>What is the different between a top-level domain and a subdomain?</li>
-    <li>Can you include <u> in an h1 tag?</li>
+    <li>Can you include &lt;u&gt; in an h1 tag?</li>
     <li>Why is it important to close your tags?</li>
-    <li>What does the <html> tag do?</li>
+    <li>What does the &lt;html&gt; tag do?</li>
     <li>What are the six main components of an HTML page?</li>
     <li>What is the difference between HTML, CSS and JavaScript?</li>
     <li>What is the difference between an element and a tag in an HTML page?</li>
     <li>What is the purpose of an HTML browser?</li>
     <li>What is the most common way to store and transmit HTML?</li>
     <li>What does doctype represent?</li>
-    <li>What is the <dl> tag used for?</li>
+    <li>What is the &lt;dl&gt; tag used for?</li>
     <li>What are the three different technologies used to create web pages?</li>
-    <li>What does the <head> element include?</li>
+    <li>What does the &lt;head&gt; element include?</li>
     <li>What does it mean when HTML is consistent across every browser?</li>
     <li>What can potentially happen if more than one head, body, and html tag are included in a code?</li>
     <li>What does HTML allow you to create?</li>
