--- a/question-bank.html
+++ b/question-bank.html
@@ -75,7 +75,7 @@ Additional content to come
     </li>
     <li>What elements should appear in an HTML file only once?</li>
     <li>Who is responsible for managing the HTML protocol?</li>
-    <li>What is the difference between HTTP and HTTPS?/li>
+    <li>What is the difference between HTTP and HTTPS?</li>
     <li>Explain the difference between the world wide web and the internet.</li>
     <li>What are the components of an HTML page?</li>
     <li>When should a developer add comments to code? What is the significance of these comments?</li>
