Added more detailed instructions

--- a/schedule/week-03/02/after-class/index.html
+++ b/schedule/week-03/02/after-class/index.html
@@ -45,7 +45,7 @@
 <li>Upload your .html file to Blackboard <strong>by or before the deadline</strong> listed above. <u>Late assignments will receive no credit.</u>
 </ol>
 </p>
-<p>I want to start maintaining filenaming conventions in our work to allow files to stand out visually in listings without risk of identical filenames overwriting others' work. This is an important practice as you start working within a team of front-end web developers, so it's best to develop good habits as we work.</p>
+<p>I want to start maintaining file naming conventions in our work to allow files to stand out visually in listings without risk of identical filenames overwriting others' work. This is an important practice as you start working within a team of front-end web developers, so it's best to develop good habits as we work. For this reason, ignoring folder and file naming conventions will <strong>count against your grade</strong> from now on.</p>
 <p>Again, reference these links to see how HTML is applied in the samples presented:
 <ul>
 <li><a href="https://www.indeed.com/career-advice/resume-samples">https://www.indeed.com/career-advice/resume-samples</a></li>
@@ -54,8 +54,17 @@
 </p>
 <h3>Guidelines</h3>
 <ul>
-<li><strong>Don't work about formatting and style:</strong> You'll add CSS styling in a later assignment, but for now we're focusing on the HTML structure.</li>
-<li><strong>Think about structure:</strong> What levels of headings will you use? How will you use lists (both ordered/numbered and unordered/bulleted lists)? What other elements will you include? How will you organize all of them?</li>
+<li><strong>Don't worry about formatting and style at this point:</strong> You'll add CSS styling in a later assignment, but for now we're focusing on the proper semantic HTML structure.</li>
+<li><strong>Think about structure:</strong>
+    <ul>
+        <li>What levels of headings will you use, and how will you manage their semantic role in the file?</li>
+        <li>How will you use lists (both ordered/numbered and unordered/bulleted lists)?</li>
+        <li>What other elements will you include? How will you organize all of them?</li>
+        <li>What does <code>view page source</code> tell you about how I created this nested unordered list?</li>
+    </ul>
+    </li>
+<li>Be sure you include the three always-required HTML elements in your file. (You know which three those are, right?)</li>
+<li>Include the "semantic strucural" elements to convey the meaning of your content: header, main, section, footer. Will you also need article and aside? That's your judgment call.</li>
 </ul>
 </section>
 </div>
