--- a/schedule/week-03/02/after-class/index.html
+++ b/schedule/week-03/02/after-class/index.html
@@ -64,7 +64,7 @@
     </ul>
     </li>
 <li>Be sure you include the three always-required HTML elements in your file. (You know which three those are, right?)</li>
-<li>Include the "semantic strucural" elements to convey the meaning of your content: header, main, section, footer. Will you also need article and aside? That's your judgment call.</li>
+<li>Include the "semantic strucural" elements to convey the meaning of your content: <code>header, main, section, footer</code>. Will you also need <code>article</code> and <code>aside</code>? That's your judgment call.</li>
 </ul>
 </section>
 </div>
