--- a/schedule/week-04/01/labs/solar-system.html
+++ b/schedule/week-04/01/labs/solar-system.html
@@ -19,7 +19,7 @@
             <!--
                 ToDo: Add CSS to Set the heading color to orange, and align it to center
             -->
-            <h4>The Solar System formed around 4.6 billion years ago.</h4>
+            <h4 class="orange">The Solar System formed around 4.6 billion years ago.</h4>
         </header>
 
         <p>
