--- a/schedule/week-04/index.html
+++ b/schedule/week-04/index.html
@@ -57,8 +57,12 @@
 </ul>
 <h3 id="post-class-reading">Post-Class Reading</h3>
 <ul>
-<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS">CSS Tutorial on MDN</a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS">CSS Tutorial on MDN</a> including linked subheadings:
+    <ul>
+<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps/How_CSS_is_structured">How CSS is structured>/a></li>
 <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/How_CSS_works">How CSS works</a></li>
+    </ul>
+</li>
 </ul>
 <hr />
 <h2 id="0402-more-css">04.02 More CSS</h2>
