--- a/schedule/week-04/index.html
+++ b/schedule/week-04/index.html
@@ -77,6 +77,7 @@
 <h3 id="group-activty-lab_1">Group Activty / Lab</h3>
 <ul>
     <li>Format the <a href="../week-02/01/labs/howto.html">aboutme.html</a> page from Week02</li>
+    <li>Instructions are in your labs folder at <a href="02/labs/howto.html"><code>week-04/02/labs/howto.html</code></a>.</li>
 </ul>
 <h3 id="post-class-reading_1">Post-Class Reading</h3>
 <ul>
