Added lab instructions

--- a/schedule/week-04/index.html
+++ b/schedule/week-04/index.html
@@ -59,7 +59,7 @@
 <ul>
 <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS">CSS Tutorial on MDN</a> including linked subheadings:
     <ul>
-<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps/How_CSS_is_structured">How CSS is structured>/a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps/How_CSS_is_structured">How CSS is structured</a></li>
 <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/How_CSS_works">How CSS works</a></li>
     </ul>
 </li>
@@ -77,12 +77,16 @@
 <h3 id="group-activty-lab_1">Group Activty / Lab</h3>
 <ul>
     <li>Format the <a href="../week-02/01/labs/howto.html">aboutme.html</a> page from Week02</li>
-    <li>Instructions are in your labs folder at <a href="02/labs/howto.html"><code>week-04/02/labs/howto.html</code></a>.</li>
+    <li>Start here for instructions to edit your previously created <code>aboutme.html</code> file to <a href="https://www.w3schools.com/css/css_howto.asp" target=_blank"><code>link</code> an external CSS file</a> you create.</li>
+    <li>Refer to other pages at that resource as needed to identify syntax for styles you want to apply.</li>
+    <li>Reference your <code>aboutme.html</code> file to identify <u>and add more</u> semantic html elements (headings, a list or two, etc.) to use as your CSS selectors. Edit the html to add elements, or class="" or id="" attributes, as needed for your CSS.</li>
+    <li>For each CSS selector, define property:value; pairs to style your <code>about-me.html</code> page. Reference file <code>week-04/02/fonts.html</code> in your copy of the class repo for suggestions on how to apply fonts.</li>
+    <li>Create a folder in your personal GitHub repo and upload your HTML and CSS files, then view in GitHub Pages.</li>
 </ul>
 <h3 id="post-class-reading_1">Post-Class Reading</h3>
 <ul>
 <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">CSS Reference</a></li>
-<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Box_model">Box Model</a>. Look through the sample files and experiment with CSS short-hand    </li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Box_model">Box Model</a>. Look through the sample files and experiment with CSS short-hand.</li>
 </ul>
 <h3 id="homework-due-this-week">Homework due this week</h3>
 <p>Look for reference files in the class folder under <a href="02/"><code>week-04/02/</code></a></p>
