--- a/schedule/week-05/index.html
+++ b/schedule/week-05/index.html
@@ -67,8 +67,10 @@
 </ul>
 <h3 id="group-activty-lab_1">Group Activty / Lab</h3>
 <ul>
-<li>Look for details in the <code>labs</code> folder for this week</li>
+<li>Look for the file <code>week-05/02/labs/resume.html</code> in the copy of the class repo you cloned to your PC.</li><li>Create a <code>style.css</code> file in the same <code>labs</code> folder and add a <code>&lt;link&gt;</code> element to <code>resume.html</code> to reference your CSS file.</li>
+<li>Follow guidance in comments within <code>resume.html</code> to style the CSS so the page matches the file <code>resume-template.png</code> in the same folder.</li>
 </ul>
+<p>The goal here is to create CSS that matches a design given to you by another source rather than choosing your own styling.</p>
 <h3 id="post-class-reading_1">Post-Class Reading</h3>
 <ul>
 <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">CSS Reference</a></li>
