Added week 3 questions

--- a/question-bank.html
+++ b/question-bank.html
@@ -118,15 +118,38 @@ Additional content to come
 -->
 </ul>
 <h2 id="week-3">Week 3</h2>
-content to come<!--
 <ul>
+<li>Why is semantic structure important? </li>
+<li>Is the &lt;article/&gt; element's role in the &lt;section/&ft; element?</li>
+<li>What is the semantic order of heading tags?</li>
+<li>What is the difference between h1, h2, h3, and h4 and when is it appropriate to use each of them?</li>
+<li>Are &lt;hr/&gt; and &lt;br/&gt; inline or block elements?</li>
+<li>What are the tags for an ordered list and an unordered list?</li>
+<li>What elements are always at the beginning of an HTML file?</li>
+<li>What is the purpose of title and h1 tag in an HTML file?</li>
+<li>What is the function of a section tag?</li>
+<li>Is it appropriate for the Header or Footer tags to be contained by the Main tags?</li>
+<li>How many h1 elements can you have per page?</li>
+<li>What are block and inline elements in HTML?</li>
+<li>Why doesn't the &lt;br/&gt; element have close tag?</li>
+<li>Why is it good for images to have relative paths?</li>
+<li>Explain ordered and unordered lists with examples.</li>
+<li>How do you make a link open in a new tab?</li>
+<li>Explain absolute, relative, and full relative paths with examples.</li>
+<li>What attribute must an image tag always have?</li>
+<li>What is the difference between the &lt;head/&gt; and &lt;header/&gt; tags?</li>
+<li>What does the element article mean and do?</li>
+<li>How can you associate a CSS file with the HTML file it should style?</li>
+<li>What is the main purpose of adding an internal link within your website?</li>
+<!--
 <li>What is the difference between a relative link and a global link?</li>
 <li>Why are the 'alt' and 'title' attributes important in <code>image</code> and <code>a</code> tags respectively?</li>
 <li>What does the attribute <code>href</code> used for?</li>
 <li>What is the purpose of the <code>main</code> and <code>footer</code> tags?</li>
 <li>What are the notations <code>./</code> and <code>../</code>? Give an example of how they should be used</li>
 <li>What is the significance of <code>index.html</code>? </li>
-</ul>-->
+-->
+</ul>
 <h2 id="week-4">Week 4</h2>
 content to come<!--
 <ul>
