--- a/question-bank.html
+++ b/question-bank.html
@@ -119,6 +119,7 @@ Additional content to come
 </ul>
 <h2 id="week-3">Week 3</h2>
 <ul>
+<li>What is an a tag and why is it important when coding?</li>
 <li>Why is semantic structure important? </li>
 <li>Is the &lt;article/&gt; element's role in the &lt;section/&ft; element?</li>
 <li>What is the semantic order of heading tags?</li>
