Changing out labs instructions

--- a/schedule/week-06/index.html
+++ b/schedule/week-06/index.html
@@ -69,9 +69,8 @@
 </ul>
     <h3 id="group-activity-lab">Group Activity / Lab</h3>
     <ul>
-        <li>Implement the below template using flexbox and the files in folder <code>news-page</code>:<br/>
-            <img src="02/news-page/news-template.png" alt="News Page Template" width="845px" /></li>
-        <li>Refer to this <a href="02/news-page/news-page-step-by-step-guide.html">step-by-step guide</a> if you need help.</li>
+        <li>Implement the planets template from last class, but this time use flexbox.</li>
+        <li>Refer to this file <a href="02/labs/planets.html"><code>02/labs/planets.html</code></a> and the <code>style.css</code>.</li>
     </ul>
 </section>
 </div>
