--- a/schedule/week-06/index.html
+++ b/schedule/week-06/index.html
@@ -70,7 +70,7 @@
     <h3 id="group-activity-lab">Group Activity / Lab</h3>
     <ul>
         <li>Implement the planets template from last class, but this time use flexbox.</li>
-        <li>Refer to this file <a href="02/labs/planets.html"><code>02/labs/planets.html</code></a> and the <code>style.css</code>.</li>
+        <li>Refer to this file <a href="02/labs/"><code>02/labs/planets.html</code></a> and the <code>style.css</code>.</li>
     </ul>
 </section>
 </div>
