Add Project deliverable information

--- a/schedule/week-06/index.html
+++ b/schedule/week-06/index.html
@@ -72,6 +72,14 @@
         <li>Implement the planets template from last class, but this time use flexbox.</li>
         <li>Refer to this file <a href="02/labs/"><code>02/labs/planets.html</code></a> and the <code>style.css</code>.</li>
     </ul>
+    <h3>Project Deliverable: Wireframes</h3>
+    <p><strong>Due Sunday, October 6, 2019, 11:59pm</strong></p>
+    <p>These are the project blue prints. You will use these as guides to implement the web pages. There are vast number of tools you can use to create wireframes. We will talk more about wireframes during class starting around Week 4. If you need inspiration try the following sites:
+        <ul>
+            <li><a href="http://dribbble.com" target="_blank">dribbble.com</a></li>
+            <li><a href="http://awwwards.com" target="_blank">awwwards.com</a></li>
+        </ul>
+    <p>Refer to the <a href="/fall2019-m01/individual-project.html">Individual Project page</a> for background information.</p>
 </section>
 </div>
     <footer class="col-md-12 text-center">
