--- a/schedule/week-04/index.html
+++ b/schedule/week-04/index.html
@@ -90,8 +90,16 @@
 </ul>
 <h3 id="homework-due-this-week">Homework due this week</h3>
 <p>Look for reference files in the class folder under <a href="02/"><code>week-04/02/</code></a></p>
-</section>
-</div>
+<h3>Project Deliverable due this week: Site Map + Media List</h3>
+<p>Find guidance for content and file formats for this deliverable on the <a href="../../individual-project.html>Individual Project</a> page on the course website.</p>
+<p>As discussed in class:
+<ul>
+    <li><strong>Due Sunday, Sept. 22, 2019 by 11:59pm</strong><li>
+    <li><strong>Site Map:</strong> List of pages with description of content plan for each and parent-child hierarchy</li>
+    <li><strong>Media List:</strong> Upload image and other media files collected (so far) for use in your project to an <code>images</code> subfolder in your project folder in your personal GitHub repo.<br/>
+        <strong>Also:</strong> Upload to GitHub <u>and</u> submit to Blackboard a table with rows listing information about each of your media resources: Filename, Source ("self" or URL where you found the image), Owner, Licensed for Reuse (yes/no). File type for this table can be a Word, Excel, or HTML document.</li>
+</ul>
+    </div>
     <footer class="col-md-12 text-center">
         
         <hr>
