--- a/schedule/week-04/index.html
+++ b/schedule/week-04/index.html
@@ -91,7 +91,7 @@
 <h3 id="homework-due-this-week">Homework due this week</h3>
 <p>Look for reference files in the class folder under <a href="02/"><code>week-04/02/</code></a></p>
 <h3>Project Deliverable due this week: Site Map + Media List</h3>
-<p>Find guidance for content and file formats for this deliverable on the <a href="../../individual-project.html>Individual Project</a> page on the course website.</p>
+<p>Find guidance for content and file formats for this deliverable on the <a href="../../individual-project.html">Individual Project</a> page on the course website.</p>
 <p>As discussed in class:
 <ul>
     <li><strong>Due Sunday, Sept. 22, 2019 by 11:59pm</strong><li>
