--- a/question-bank.html
+++ b/question-bank.html
@@ -38,8 +38,6 @@
 <p>I will compile and update the list every week.</p>
 <h2 id="spring-2019">Fall 2019</h2>
 <h2 id="week-1-anatomy-of-the-web">Week 1 - Anatomy of the Web</h2>
-
-Additional content to come
 <ul>
     <li>Explain the difference between the world wide web and the internet.</li>
     <li>What are the differences between a URL and the HTTP protocol? What is the difference between HTTP and HTTPS? </li>
@@ -152,7 +150,31 @@ Additional content to come
 -->
 </ul>
 <h2 id="week-4">Week 4</h2>
-content to come<!--
+<ul>
+<li>What is the primary function of CSS?</li>
+<li>What are the ways to indicate border color?</li>
+<li>Is HTML used to style content?</li>
+<li>If an external style sheet specifies font for an h1/ element to be 20px and an inline styling specifies it to be 18px, what size will the font be for that element?</li>
+<li>Can HTML and CSS work by themselves to create a fully functioning webpage?</li>
+<li>What is the difference between external and internal style sheets?</li>
+<li>Does the CSS file name have to match the HTML file name it is associated with?</li>
+<li>What is the term in CSS for a property-value pair?</li>
+<li>What are the steps to get a gradient background?</li>
+<li>When you want one single h3/ tag to be a certain color different from your other h3 tags, what do you do?</li>
+<li>What is the difference between the way that external, internal, and inline elements affect the pages/elements they are included in?</li>
+<li>What different between <code>href="../styles/style.css"</code> and <code>href="styles/style.css"</code>?</li>
+<li>What does the syntax <code>rel="stylesheet"</code> mean? What do the elements <code>rel</code> and <code>stylesheet</code> stand for?</li>
+<li>What does the acronym DOM stand for?</li>
+<li>How many pixels is an 'em'?</li>
+<li>How can you style one section in a different way than others marked up with the same <code>section/</code> tags?</li>
+<li>What three elements are always required in a webpage? How many of each should a single page include?</li>
+<li>What are the different units to specify font sizes in CSS?</li>
+<li>What steps must the browser take in order for the content to be displayed on your screen? </li>
+<li>How can CSS lay out two block elements side by side on the same row?</li>
+<li>Explain the difference between a CSS Declaration and a CSS Ruleset/Rule.</li>
+<li>Explain the difference between block and inline elements in HTML. Give examples of each.</li>
+</ul>
+<!--
 <ul>
 <li>List 3 different units of measurements in CSS. Give an example for each</li>
 <li>Name and describe the three different ways to apply CSS to an HTML document. Give examples</li>
