--- a/schedule/week-07/02/after-class/index.html
+++ b/schedule/week-07/02/after-class/index.html
@@ -31,24 +31,19 @@
 </div>
 <div role="main" id="page-body">
 <section id="header-panel">
-<h1>Week08.02 &ndash; Lab</h1>
+<h1>Week 07 Homework</h1>
 </section>
 <section id="page-content">
-<h2>Make the News Page from Week07 Responsive</h2>
-<h3>On Laptops</h4>
-<img src="news-page/news-template.png" alt="News Page Template" width="100%">
-<h3>On iPads</h4>
-<img src="news-page/news-page-ipad.png" alt="News Page Template" >
-<h3>On Cell-Phones</h4>
-<img src="news-page/news-page-iphone.png" alt="News Page Template" >
-</p>
-</section>
-<h3>Guidelines</h3>
-<ul>
-<li>Open files <code>news-page.html</code> and <code>css/solution-style.css</code> and edit them to make the page responsive.</li>
-<li>After working toward the solution on your own, you can refer to <code>news-page/news-page-solution.html</code>.</li>
-</ul> 
-    
+    <h2>Implement the News Page from folder <code>week-07/02/after-class/news-page</code></h2>
+    <img src="news-page/news-template.png" alt="template file" align="right"/>
+    <ul>
+        <li>Download <a href="news-page.zip">news-page.zip</a> and extract it on your PC's file system.</li>
+        <li>Open the file <code>news-page-step-by-step-guide.html</code> in VS Code and follow instructions to create your own file named <code>[your netID]-news-page.html</code> and a CSS file linked from your HTML <code>head/</code> element.</li>
+        <li>Create a new folder in your personal GitHub repo and upload your new HTML and CSS files.</li>
+        <li>Create a subfolder <code>images</code> and upload the five .jpg image files you downloaded in the <code>news-page.zip</code> file.</li>
+        <li>View in GitHub Pages and work with your HTML and CSS until they resemble the <code>news-template.png</code> image included in the package.</li>
+        <li>Submit your HTML and CSS files to Blackboard along with your GitHub Pages URL.</li>
+    </ul>    
 </section>
 </div>
     <footer class="col-md-12 text-center">
