--- a/schedule/week-07/index.html
+++ b/schedule/week-07/index.html
@@ -58,8 +58,7 @@
 <hr />
 <h3 id="homework-due-this-week">Homework due this week</h3>
 <ol>
-<li>Complete SAGE survey (you will receive an email when the window opens)</li>
-<li>Look through homework/readme.txt for this week's homework</li>
+    <li>Develop HTML and CSS to match a template image found in &mdash; <a href="02/after-class/">instructions here</a>.</li>
 <li>Do the pre-class reading for next class</li>
 </ol>
 </section>
