--- a/schedule/week-07/02/after-class/index.html
+++ b/schedule/week-07/02/after-class/index.html
@@ -35,7 +35,7 @@
 </section>
 <section id="page-content">
     <h2>Implement the News Page from folder <code>week-07/02/after-class/news-page</code></h2>
-    <img src="news-page/news-template.png" alt="template file" align="right"/>
+    <img src="news-page/news-template.png" alt="template file" width="50%" align="right"/>
     <ul>
         <li>Download <a href="news-page.zip">news-page.zip</a> and extract it on your PC's file system.</li>
         <li>Open the file <code>news-page-step-by-step-guide.html</code> in VS Code and follow instructions to create your own file named <code>[your netID]-news-page.html</code> and a CSS file linked from your HTML <code>head/</code> element.</li>
