--- a/schedule/week-07/index.html
+++ b/schedule/week-07/index.html
@@ -58,7 +58,7 @@
 <hr />
 <h3 id="homework-due-this-week">Homework due this week</h3>
 <ol>
-    <li>Develop HTML and CSS to match a template image found in &mdash; <a href="02/after-class/">instructions here</a>.</li>
+    <li>Develop HTML and CSS to match a template image found in a resource package you will download &mdash; <a href="02/after-class/">instructions here</a>.</li>
 <li>Do the pre-class reading for next class</li>
 </ol>
 </section>
